[project]
name = "BetterWorldBossDomes"
version = "1"
authors = [{ name = "Yeti" }]
description = "Rescales Enemies to the players level."

[tool.sdkmod]
name = "Better World Boss Domes"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = ""
version = "1"
coop_support = "HostOnly"