[project]
name = "DialogSkipper"
version = "1"
authors = [{ name = "Yeti" }]
description = "Skip Dialog for free!"

[tool.sdkmod]
name = "Dialog Skipper"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/yeti-bl4-sdk/raw/refs/heads/main/DialogSkipper/DialogSkipper.sdkmod"
version = "1"