[project]
name = "EncoreTweaks"
version = "1"
authors = [{ name = "Yeti" }]
description = "Fills your health/shield/ammo/actionskill when using the big Encore. Options include killing all enemies in the area."

[tool.sdkmod]
name = "Encore Tweaks"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/yeti-bl4-sdk/raw/refs/heads/main/EncoreTweaks/EncoreTweaks.sdkmod"
version = "1"
coop_support = "HostOnly"