[project]
name = "ModifierEater"
version = "1"
authors = [{ name = "Yeti" }]
description = "Pick your own enemy modifiers. Active: Enemies will spawn with the modifier. Inactive: Enemies won't spawn with the modifier."

[tool.sdkmod]
name = "Modifier Eater"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/yeti-bl4-sdk/raw/refs/heads/main/ModifierEater/ModifierEater.sdkmod"
version = "1"