[project]
name = "PlayerScaledEnemies"
version = "1"
authors = [{ name = "Yeti" }]
description = "Rescales Enemies to the players level."

[tool.sdkmod]
name = "Player Scaled Enemies"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/yeti-bl4-sdk/raw/refs/heads/main/PlayerScaledEnemies/PlayerScaledEnemies.sdkmod"
version = "1"