[project]
name = "RarityRemover"
version = "1"
authors = [{ name = "Yeti" }]
description = "Removes rarities at certain levels. White items at 15, green items at 25, and reduced blue chance at 50."

[tool.sdkmod]
name = "Rarity Remover"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/yeti-bl4-sdk/raw/refs/heads/main/RarityRemover/RarityRemover.sdkmod"
version = "1"