[project]
name = "SeparateMeleeGrappleKeys"
version = "1"
authors = [{ name = "Yeti" }]
description = "Adds separate keybind options for melee and grapple. Optionally removing the lock on."

[tool.sdkmod]
name = "Separate Melee/Grapple Keys"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = ""
version = "1"
coop_support = "ClientSide"