[project]
name = "SeparateMeleeGrappleKeys"
version = "1"
authors = [{ name = "Yeti" }]
description = "Adds separate keybind options for melee and grapple. Optionally removing the lock on. Currently doesn't support amon's axes/swords."

[tool.sdkmod]
name = "Separate Melee/Grapple Keys"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/yeti-bl4-sdk/raw/refs/heads/main/SeparateMeleeGrappleKeys/SeparateMeleeGrappleKeys.sdkmod"
version = "1"
coop_support = "ClientSide"
