[project]
name = "TPBackToVehicle"
version = "1"
authors = [{ name = "Yeti" }]
description = "Save where you last got off your vehicle so you can teleport back to it, cutting down on long drive backs. (Like all the previous games.)"

[tool.sdkmod]
name = "Teleport Back to Vehicle"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = ""
version = "1"
coop_support = "HostOnly"