[project]
name = "TPSStyleSlams"
version = "1"
authors = [{ name = "Yeti" }]
description = "Removes the very long animations of the ground slam. Recommended enabling and changing settings in the main menu as some features require your character to load."

[tool.sdkmod]
name = "TPS Style Slams"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = ""
version = "1"
coop_support = "ClientSide"