[project]
name = "command_history"
version = "1"
authors = [{ name = "Yeti" }]
description = "Save your console history between game launches. History is saved in sdk_mods/settings/command_history."

[tool.sdkmod]
name = "Command History"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = ""
version = "1"